<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical" >
    
    <LinearLayout
        android:id="@+id/teresia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="40dip"
        android:background="@color/white"
        android:orientation="vertical"
        android:gravity="center"
        android:clickable="true" >
        
        <ImageView
            android:id="@+id/tess"
            android:layout_width="100dip"
            android:layout_height="100dip"
            android:layout_weight="1"
            android:src="@drawable/tess" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:textSize="18dip"
            android:text="@string/teresia"
            android:textColor="@color/scarlet" />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/white"
        android:gravity="left"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="20dip"
            android:text="@string/tessText"
            android:textColor="@color/black"
            android:textSize="@dimen/main_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginTop="25dip"
            android:text="@string/gitText"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/sym_action_email" />
		<!--android:autoLink="all"-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dip"
            android:layout_marginTop="5dip"
            
            android:text="@string/pNumber"
            android:textColor="@color/black"
            android:textSize="@dimen/main_small_size" />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dip"
            android:orientation="horizontal" >
            
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/sym_action_email" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_gravity="center_vertical"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="@dimen/main_small_size" />
        
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dip"
            android:text="@string/website"
            android:textColor="@color/black"
            android:textSize="@dimen/main_small_size" />
    </LinearLayout>

</LinearLayout>
</ScrollView>
